--- a/packages/Ketcher/lib/MolSVG/styles.css
+++ b/packages/Ketcher/lib/MolSVG/styles.css
@@ -1,11 +1,27 @@
 .mol-svg-container {
 	outline: 1px solid #e5e5e5;
 	border-radius: 4px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .mol-svg-box {
 	height: 100%;
 	width: 100%;
+	position: relative;
+}
+
+.mol-svg-loading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 1;
 }
 
 .error-container {
